@@ -1560,24 +1560,26 @@ BEGIN
     EDITTEXT        DISPID_ROTRA9,24,184,40,12,ES_AUTOHSCROLL
 END
 
-IDD_PROPPRIMITIVE_VISUALS DIALOGEX 0, 0, 125, 140
+IDD_PROPPRIMITIVE_VISUALS DIALOGEX 0, 0, 125, 144
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    EDITTEXT        101,31,7,56,14,ES_AUTOHSCROLL
-    COMBOBOX        DISPID_Image,7,31,111,124,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Import Mesh",IDC_LOAD_MESH_BUTTON,11,54,46,14
-    PUSHBUTTON      "Export Mesh",IDC_EXPORT_MESH_BUTTON,65,54,46,14
-    COMBOBOX        IDC_MATERIAL_COMBO,7,87,111,60,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Visible",103,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,108,56,10
-    CONTROL         "Static Rendering",IDC_STATIC_RENDERING_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,118,69,10
-    CONTROL         "Draw Textures inside",106,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,128,82,10
-    LTEXT           "Material",IDC_STATIC,7,77,63,9
-    LTEXT           "Image",IDC_STATIC,7,21,20,8
-    LTEXT           "Sides",IDC_STATIC,7,10,18,8
-    GROUPBOX        "3D Mesh",IDC_STATIC,7,44,111,30
-    LTEXT           "Depth Bias",IDC_STATIC,80,106,36,8
-    EDITTEXT        IDC_DEPTH_BIAS,79,115,36,12,ES_AUTOHSCROLL
+    LTEXT           "Image",IDC_STATIC,7,7,20,8
+    COMBOBOX        DISPID_Image,7,17,111,124,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    GROUPBOX        "3D Mesh",IDC_STATIC,7,33,111,30
+    PUSHBUTTON      "Import Mesh",IDC_LOAD_MESH_BUTTON,11,43,46,14
+    PUSHBUTTON      "Export Mesh",IDC_EXPORT_MESH_BUTTON,65,43,46,14
+    LTEXT           "Material",IDC_STATIC,7,66,63,9
+    COMBOBOX        IDC_MATERIAL_COMBO,7,76,111,60,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Visible",103,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,97,56,10
+    CONTROL         "Static Rendering",IDC_STATIC_RENDERING_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,107,69,10
+    CONTROL         "Draw Textures inside",106,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,117,82,10
+    LTEXT           "Depth Bias",IDC_STATIC,80,95,36,8
+    EDITTEXT        IDC_DEPTH_BIAS,79,104,36,12,ES_AUTOHSCROLL
+    LTEXT           "Legacy/Sides",IDC_STATIC,7,132,45,8
+    EDITTEXT        101,53,129,20,12,ES_AUTOHSCROLL
+    LTEXT           "Editor",IDC_STATIC,77,132,36,8
+    EDITTEXT        IDC_EDGE_FACTOR_UI,98,129,20,12,ES_AUTOHSCROLL
 END
 
 IDD_PROPPLUNGER_VISUALS DIALOGEX 0, 0, 125, 62
